fix: use userId-based repo queries in HealthReportController (matches TrackerService pattern)